<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.geekbrains.weather.WeatherFragment">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="@color/purpleLight"
        android:layout_height="0px"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/ivWeather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/rain_3x" />

        <TextView
            android:id="@+id/tv_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivWeather"
            android:layout_centerHorizontal="true"
            android:text="@string/country"
            android:visibility="gone"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_below="@+id/tv_country"
            android:text="+18"
            android:textColor="@android:color/white"
            android:textSize="80sp" />

    </RelativeLayout>
    <FrameLayout
        android:id="@+id/data"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="0.4"
        android:background="@color/purpleLight">
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="6"
            android:rowCount="4"
            android:layout_gravity="fill">

            <ImageView
                android:layout_width="0px"
                android:layout_rowSpan="2"
                android:layout_height="0px"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/tshirt"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_row="0"
                android:scaleType="fitCenter"
                android:layout_marginLeft="@dimen/textview_padding"

                />

            <TextView
                android:layout_width="0px"
                android:layout_centerVertical="true"
                android:gravity="bottom"
                android:layout_marginLeft="@dimen/textview_padding"
                android:text="+33"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:layout_columnWeight="1.6"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_row="0"

                />
            <ImageView
                android:layout_width="0px"
                android:layout_rowSpan="2"
                android:layout_height="0px"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/termometer"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_column="2"
                android:layout_row="0"
                android:scaleType="fitCenter"
                android:layout_marginLeft="@dimen/textview_padding"

                />
            <TextView
                android:layout_width="0px"
                android:layout_centerVertical="true"
                android:gravity="bottom"
                android:text="1084"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="2"
                android:layout_column="3"
                android:layout_row="0"
                android:layout_marginLeft="@dimen/textview_padding"
                />

            <ImageView
                android:layout_width="0px"
                android:layout_rowSpan="2"
                android:layout_height="0px"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/humidity"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_column="4"
                android:layout_row="0"
                android:scaleType="fitCenter"
                android:layout_marginLeft="@dimen/textview_padding"

                />
            <TextView
                android:layout_width="0px"                    android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="bottom"
                android:text="+16%"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="2"
                android:layout_column="5"
                android:layout_row="0"
                android:layout_marginLeft="@dimen/textview_padding"
                />

            <TextView
                android:layout_width="0px"
                android:layout_centerHorizontal="true"
                android:gravity="top"
                android:text="@string/feels_like"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:layout_columnWeight="1.6"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_row="1"
                android:layout_marginLeft="@dimen/textview_padding"
                />

            <TextView
                android:layout_width="0px"
                android:layout_centerVertical="true"
                android:gravity="top"
                android:text="@string/pressure"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="2"
                android:layout_column="3"
                android:layout_row="1"
                android:layout_marginLeft="@dimen/textview_padding"
                />


            <TextView
                android:layout_width="0px"                    android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/humidity"
                android:gravity="top"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="2"
                android:layout_column="5"
                android:layout_row="1"
                android:layout_marginLeft="@dimen/textview_padding"
                />
            <ImageView
                android:layout_width="0px"
                android:layout_rowSpan="2"
                android:layout_height="0px"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/wind"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_row="2"
                android:scaleType="fitCenter"
                android:layout_marginLeft="@dimen/textview_padding"

                />
            <TextView
                android:layout_width="0px"
                android:layout_centerVertical="true"
                android:gravity="bottom"
                android:text="16"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:layout_columnWeight="1.6"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_row="2"
                android:layout_marginLeft="@dimen/textview_padding"

                />
            <ImageView
                android:layout_width="0px"
                android:layout_rowSpan="2"
                android:layout_height="0px"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/car"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_column="2"
                android:layout_row="2"
                android:scaleType="fitCenter"
                android:layout_marginLeft="@dimen/textview_padding"

                />
            <TextView
                android:layout_width="0px"
                android:layout_centerVertical="true"
                android:gravity="bottom"
                android:text="20m"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="2"
                android:layout_column="3"
                android:layout_row="2"
                android:layout_marginLeft="@dimen/textview_padding"
                />

            <ImageView
                android:layout_width="0px"
                android:layout_rowSpan="2"
                android:layout_height="0px"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/rain_umb"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_column="4"
                android:layout_row="2"
                android:scaleType="fitCenter"
                android:layout_marginLeft="@dimen/textview_padding"

                />
            <TextView
                android:layout_width="0px"                    android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="bottom"
                android:text="10%"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="2"
                android:layout_column="5"
                android:layout_row="2"
                android:layout_marginLeft="@dimen/textview_padding"
                />

            <TextView
                android:layout_width="0px"
                android:layout_centerVertical="true"
                android:gravity="top"
                android:text="@string/wind"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:layout_columnWeight="1.6"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_row="3"
                android:layout_marginLeft="@dimen/textview_padding"


                />

            <TextView
                android:layout_width="0px"
                android:layout_centerVertical="true"
                android:gravity="top"
                android:text="@string/humidity"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="2"
                android:layout_column="3"
                android:layout_row="3"
                android:layout_marginLeft="@dimen/textview_padding"
                />


            <TextView
                android:layout_width="0px"
                android:layout_height="0px"
                android:layout_centerHorizontal="true"
                android:gravity="top"
                android:text="@string/precipitation"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="2"
                android:layout_column="5"
                android:layout_row="3"
                android:layout_marginLeft="@dimen/textview_padding"
                />

        </GridLayout>
    </FrameLayout>
</LinearLayout>

</android.support.constraint.ConstraintLayout>
